fix icon bleeds

--- a/styles/designs/cardboard/parts/_titles-components.scss
+++ b/styles/designs/cardboard/parts/_titles-components.scss
@@ -124,6 +124,7 @@ $H1--Numbered__Icon: (
     right: 0,
     z-index: 2,
     transform: translate3d(-1in, 0, 0),
+    margin-left: fullBleedsMargin(0, rem),
   )
 );
 
