--- a/styles/output/business-ethics-pdf.css
+++ b/styles/output/business-ethics-pdf.css
@@ -1181,7 +1181,8 @@ nav#toc > ol > li > ol > li > a::after {
   left: 0;
   right: 0;
   z-index: 2;
-  transform: translate3d(-1in, 0, 0); }
+  transform: translate3d(-1in, 0, 0);
+  margin-left: -1.2rem; }
 
 [data-type="chapter"] > h1 > .os-part-text {
   display: none; }
@@ -1203,7 +1204,7 @@ nav#toc > ol > li > ol > li > a::after {
   bottom: 5.3rem;
   color: #24739E;
   border-radius: 50%;
-  left: 0.5rem;
+  left: -0.5rem;
   z-index: 2;
   font-weight: bold; }
 
