--- a/styles/templates/template3/parts/_titles-settings.scss
+++ b/styles/templates/template3/parts/_titles-settings.scss
@@ -92,7 +92,7 @@
             bottom: 5.3rem,
             //color is book specific set in book.scss file 
             padding: 0.6rem 0,
-            left: 0.5rem,
+            left: -0.5rem,
             z-index: 2,
         ),     
     ),
